# Website-Mattan

./: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  server.js
KickRumble/: CMakeLists.txt
KickRumble/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
lib/: adminAuth.js  ensureSeed.js  settings.js  styleExtractor.js  upload.js
prisma/: schema.prisma  seed.js
prisma/migrations/20260302025813_init/: migration.sql
prisma/migrations/20260305000000_add_media_type/: migration.sql
prisma/migrations/20260305_add_orders_customers_coupons/: migration.sql
public/css/: admin.css  style.css
routes/: index.js  upload.js
routes/admin/: analytics.js  collections.js  coupons.js  customers.js  index.js  items.js  layout.js  media.js  news.js  orders.js  references.js  settings.js
uploads/: .gitignore
views/: 404.ejs  about.ejs  collection.ejs  collections.ejs  index.ejs  news-post.ejs  news.ejs  piece.ejs  preview.ejs
views/admin/: analytics.ejs  collection-form.ejs  collections.ejs  coupon-form.ejs  coupons.ejs  customers.ejs  dashboard.ejs  item-form.ejs  items.ejs  layout-editor.ejs  login.ejs  media.ejs  news-form.ejs  news.ejs  orders.ejs  settings.ejs
views/partials/: footer.ejs  head.ejs  nav.ejs
views/sections/: banner.ejs  brand-story.ejs  collections-grid.ejs  countdown.ejs  cta-strip.ejs  divider.ejs  faq.ejs  featured-products.ejs  features-grid.ejs  gallery.ejs  hero.ejs  logo-bar.ejs  news-feed.ejs  newsletter.ejs  social-feed.ejs  testimonials.ejs  text-block.ejs  video.ejs
(+4 files in other folders)
